--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
         <div class="text">
             Registration  
         </div>
-        <form name="registrationForm" action="/" method="post" onsubmit="return validateForm()">
+        <form name="registrationForm" action="https://www.iskratech.tech/" method="post" onsubmit="return validateForm()">
             <div class="field">
                 <input type="text" required name="name" autocomplete="off">
                 <span class="fas fa-user"></span>
